--- a/capabilities.html
+++ b/capabilities.html
@@ -38,8 +38,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Preload critical fonts -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap" media="print" id="google-fonts-stylesheet">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap"></noscript>
+    <script src="assets/js/font-loader.js" defer></script>
 
     <!-- Critical CSS with optimized loading -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -142,26 +144,7 @@
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5DJCCT19V"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-T5DJCCT19V');
-      
-      // Track Web Vitals
-      new PerformanceObserver((entryList) => {
-          for (const entry of entryList.getEntries()) {
-              if (entry.entryType === 'largest-contentful-paint') {
-                  gtag('event', 'LCP', {
-                      'event_category': 'Web Vitals',
-                      'value': Math.round(entry.startTime),
-                      'non_interaction': true
-                  });
-              }
-          }
-      }).observe({entryTypes: ['largest-contentful-paint']});
-    </script>
+    <script src="assets/js/gtag-init.js" defer></script>
 
 </head>
 <body class="capabilities">
@@ -192,7 +175,7 @@
 
             <!-- Centered Logo - Full Height -->
             <a class="navbar-brand mx-auto" href="index.html" aria-label="Home">
-                <img src="assets/images/logo-blk-long.png" alt="Bloom'n Events Co" class="navbar-logo">
+                <img src="assets/images/logo-blk-long.png" alt="Bloom'n Events Co" class="navbar-logo" loading="eager" decoding="async">
             </a>
 
             <!-- Right Contact Button -->
@@ -259,11 +242,11 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="introductionHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Introduction</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <p class="text-charcoal mb-3">Bloom'n Events Co is a fully integrated creative production studio and event partner. We design, engineer, build, brand, and deliver experiences from the ground up—locally, collaboratively, and almost entirely in-house.</p>
                                     <p class="text-charcoal mb-0"><strong>If you need it built, designed, coded, printed, engineered, signed, staged, or supplied—we do it.<br>If we can't, we know someone exceptional who can.<br>All you need to bring is a <span class="text-gold">date, a budget, and the ambition to make something meaningful</span>.</strong></p>
-                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">One team. One point of contact. No juggling multiple suppliers.</p>
+                                    <p class="text-charcoal mt-3 mb-0 capability-card-italic">One team. One point of contact. No juggling multiple suppliers.</p>
                                 </div>
                             </div>
                         </div>
@@ -275,11 +258,11 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="oneStopHeading" class="text-gold heading-blush-bg content-heading-large mb-4">A True One-Stop Event Partner</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <p class="text-charcoal mb-3">We remove friction by keeping everything under one roof. No hand-offs. No fragmented suppliers. No creative dilution. Just one accountable team carrying your project from first sketch to final guest exit.</p>
                                     <p class="text-charcoal mb-0">Our capabilities span physical, digital, creative, and operational delivery—allowing us to produce cohesive, high-impact events with clarity, speed, and precision.</p>
-                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">You work with one team. They know your project inside and out.</p>
+                                    <p class="text-charcoal mt-3 mb-0 capability-card-italic">You work with one team. They know your project inside and out.</p>
                                 </div>
                             </div>
                         </div>
@@ -291,7 +274,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="fabricationHeading" class="text-gold heading-blush-bg content-heading-large mb-4">In-House Fabrication & Custom Builds</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Metal. Timber. Structure. Detail.</h3>
                                     <p class="text-charcoal mb-3">Our workshop is where ideas become physical reality. We design and fabricate custom elements in-house, including:</p>
@@ -303,7 +286,7 @@
                                         <li>Structural and decorative elements engineered for real-world use</li>
                                     </ul>
                                     <p class="text-charcoal mt-3 mb-0">Because fabrication sits alongside design and engineering, concepts remain intact from drawing board to install—no compromises, no surprises.</p>
-                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">Built locally. You see progress. Changes happen quickly.</p>
+                                    <p class="text-charcoal mt-3 mb-0 capability-card-italic">Built locally. You see progress. Changes happen quickly.</p>
                                 </div>
                             </div>
                         </div>
@@ -315,7 +298,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="engineeringHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Engineering Design & Safety</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Creative ambition, grounded in reality.</h3>
                                     <p class="text-charcoal mb-3">Our team brings deep experience across engineering, construction, and high-risk environments. Every build and installation is approached with safety, compliance, and structural integrity at its core.</p>
@@ -327,7 +310,7 @@
                                         <li>Compliance with relevant standards and regulations</li>
                                     </ul>
                                     <p class="text-charcoal mt-3 mb-0">This allows bold ideas to exist safely—and confidently—in the real world.</p>
-                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">Engineering and creative work together from day one. No last-minute compromises.</p>
+                                    <p class="text-charcoal mt-3 mb-0 capability-card-italic">Engineering and creative work together from day one. No last-minute compromises.</p>
                                 </div>
                             </div>
                         </div>
@@ -339,7 +322,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="marketingHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Marketing, Graphic Design & Visual Identity</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Clarity before decoration.</h3>
                                     <p class="text-charcoal mb-3">We design the visual language that carries your message. From campaign thinking to execution, our creative team delivers:</p>
@@ -351,7 +334,7 @@
                                         <li>Media packs and sponsor-ready materials</li>
                                     </ul>
                                     <p class="text-charcoal mt-3 mb-0">Everything is designed to align—brand, message, environment, and audience experience working as one system.</p>
-                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">Design and engineering collaborate from the start. Creative vision meets technical reality.</p>
+                                    <p class="text-charcoal mt-3 mb-0 capability-card-italic">Design and engineering collaborate from the start. Creative vision meets technical reality.</p>
                                 </div>
                             </div>
                         </div>
@@ -363,7 +346,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="signageHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Signage, Signwriting & Decals</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Built to be seen. Built to last.</h3>
                                     <p class="text-charcoal mb-3">Our signage capability ranges from precision print to handcrafted execution:</p>
@@ -386,7 +369,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="digitalHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Digital & Web Development for Events</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Where physical experiences meet digital flow.</h3>
                                     <p class="text-charcoal mb-3">We design and build event-specific digital platforms that support engagement before, during, and after the event:</p>
@@ -409,7 +392,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="mediaHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Media Packs, Communications & Contact Systems</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Designed for reach, not just aesthetics.</h3>
                                     <p class="text-charcoal mb-3">We create media-ready materials that make it easy for partners, sponsors, press, and stakeholders to engage:</p>
@@ -431,12 +414,12 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="partnershipsHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Local Partnerships & Hospitality</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Community-driven. Quality-focused.</h3>
                                     <p class="text-charcoal mb-3">We actively collaborate with trusted local businesses to deliver catering, drinks, cocktails, and specialist services. These partnerships allow us to scale seamlessly while keeping quality high and values aligned.</p>
                                     <p class="text-charcoal mb-0"><strong>Local isn't a limitation—it's a strength.</strong></p>
-                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">We know who to call. You don't need to vet suppliers. We handle it.</p>
+                                    <p class="text-charcoal mt-3 mb-0 capability-card-italic">We know who to call. You don't need to vet suppliers. We handle it.</p>
                                 </div>
                             </div>
                         </div>
@@ -448,7 +431,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h2 id="deliveryHeading" class="text-gold heading-blush-bg content-heading-large mb-4">End-to-End Project Delivery</h2>
-                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card mb-4 capability-card">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">From first conversation to final pack-down.</h3>
                                     <p class="text-charcoal mb-3">Our scope includes:</p>
@@ -470,7 +453,7 @@
                 <section class="mb-5" aria-labelledby="finalStatementHeading">
                     <div class="row">
                         <div class="col-12">
-                            <div class="card" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <div class="card capability-card">
                                 <div class="card-body text-center">
                                     <p class="lead text-charcoal mb-0"><strong>In short: We don't just show up with a van full of props. We show up with tools, talent, vision, and over 120 years of combined mastery. We're artists, engineers, storytellers, and builders—here to create moments your audience will never forget.</strong></p>
                                 </div>
@@ -594,6 +577,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/main.js" type="module" defer></script>
+    <script src="assets/js/footer-accordion.js" defer></script>
     <script src="assets/js/animations.js" type="module" defer></script>
 </body>
 </html>
