--- a/displays.html
+++ b/displays.html
@@ -38,8 +38,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Preload critical fonts -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap" media="print" id="google-fonts-stylesheet">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap"></noscript>
+    <script src="assets/js/font-loader.js" defer></script>
 
     <!-- Critical CSS with optimized loading -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -711,74 +713,64 @@
             <div class="row align-items-center">
                 <!-- All Links on Left -->
                 <div class="col-9 footer-column">
-            <div class="row">
-                        <div class="col-3 footer-accordion-column">
+                    <div class="row">
+                        <div class="col-4 footer-accordion-column">
                             <h5>Bloom'n</h5>
-                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                            <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-bloomn" aria-expanded="false" aria-controls="footer-accordion-bloomn">
                                 <span>Bloom'n</span>
                                 <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                             </button>
-                            <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                            <div class="footer-accordion-content collapse" id="footer-accordion-bloomn" data-bs-parent=".footer-accordion-column">
                                 <ul class="nav d-flex flex-column row-gap-0">
-                                <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
-                    </ul>
+                                    <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
+                                </ul>
                             </div>
-                </div>
-                        <div class="col-3 footer-accordion-column">
+                        </div>
+                        <div class="col-4 footer-accordion-column">
                             <h5>Portfolio</h5>
-                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                            <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-portfolio" aria-expanded="false" aria-controls="footer-accordion-portfolio">
                                 <span>Portfolio</span>
                                 <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                             </button>
-                            <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                            <div class="footer-accordion-content collapse" id="footer-accordion-portfolio" data-bs-parent=".footer-accordion-column">
                                 <ul class="nav d-flex flex-column row-gap-0">
-                                <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
-                    </ul>
+                                    <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
+                                </ul>
                             </div>
-                </div>
-                        <div class="col-3 footer-accordion-column">
+                        </div>
+                        <div class="col-4 footer-accordion-column">
                             <h5>Success Stories</h5>
-                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                            <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-success" aria-expanded="false" aria-controls="footer-accordion-success">
                                 <span>Success Stories</span>
                                 <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                             </button>
-                            <div class="footer-accordion-content" id="footer-accordion-success">
+                            <div class="footer-accordion-content collapse" id="footer-accordion-success" data-bs-parent=".footer-accordion-column">
                                 <ul class="nav d-flex flex-column row-gap-0">
-                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
-                    </ul>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                                </ul>
                             </div>
-                </div>
-                        <div class="col-3 footer-accordion-column">
-                            <h5>Policies</h5>
-                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-policies">
-                                <span>Policies</span>
-                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
-                            </button>
-                            <div class="footer-accordion-content" id="footer-accordion-policies">
-                                <ul class="nav d-flex flex-column row-gap-0">
-                                <li class="nav-item"><a class="nav-link text-light" href="tandcs.html">Terms & Conditions</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="policies.html">Company Policies</a></li>
-                    </ul>
-                            </div>
-                </div>
                         </div>
-                        </div>
+                    </div>
+                </div>
                 
                 <!-- Logo in Center -->
                 <div class="col-3 text-center footer-column order-md-2">
                     <a href="index.html" aria-label="Home">
                         <img src="assets/images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
                     </a>
+                    <p class="text-gold fw-light small mb-1">
+                        <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>
+                    </p>
                     <p class="text-gold fw-light small mb-0">
                         Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
                     </p>
@@ -807,6 +799,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/main.js" type="module" defer></script>
+    <script src="assets/js/footer-accordion.js" defer></script>
     <script src="assets/js/animations.js" type="module" defer></script>
 </body>
 </html>
